@@ -4,40 +4,78 @@ import de.tozwhv.vereinskasse.server.dto.OrgTreeResponseDTO;
 import de.tozwhv.vereinskasse.server.modell.OrganisationalUnit;
 import de.tozwhv.vereinskasse.server.modell.User;
 import de.tozwhv.vereinskasse.server.repository.OrganisationalUnitRepository;
+import de.tozwhv.vereinskasse.server.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class OrganisationalUnitService {
 
     private final OrganisationalUnitRepository orgUnitRepository;
+    private final UserRepository userRepository;
+    private final AppSettingsService appSettingsService;
 
     /**
      * Liefert den kompletten Baum aller Abteilungen und deren User.
-     * Einstiegspunkte sind alle Einheiten ohne Parent (parent_id IS NULL).
+     * Berücksichtigt die Einstellung, ob User ohne OU flach oder gruppiert angezeigt werden.
      */
     @Transactional(readOnly = true)
     public List<OrgTreeResponseDTO> getFullOrgTree() {
+        // 1. Echte Root-OUs laden
         List<OrganisationalUnit> rootUnits = orgUnitRepository.findByParentIsNull();
-        return rootUnits.stream()
+        List<OrgTreeResponseDTO> tree = new ArrayList<>(rootUnits.stream()
                 .map(this::convertToTreeResponse)
-                .toList();
+                .toList());
+
+        // 2. Einstellung aus den AppSettings abrufen
+        boolean showAsFlatUser = appSettingsService.getSettingsInternal().isShowUserWithoutOuAsUser();
+
+        // 3. User ohne OU holen
+        List<User> unassignedUsers = userRepository.findByOrgUnitIdIsNull();
+
+        if (!unassignedUsers.isEmpty()) {
+            if (showAsFlatUser) {
+                // OPTION A: Jeden User einzeln als "isUser = true" auf die oberste Ebene
+                for (User user : unassignedUsers) {
+                    tree.add(new OrgTreeResponseDTO(
+                            null,
+                            user.getUsername(),
+                            List.of(),
+                            List.of(),
+                            true  // Kennzeichnung als User
+                    ));
+                }
+            } else {
+                // OPTION B: Alle in eine Pseudo-OU bündeln (isUser = false)
+                tree.add(new OrgTreeResponseDTO(
+                        -1L,
+                        "Nicht zugeordnet",
+                        List.of(),
+                        unassignedUsers.stream().map(User::getUsername).sorted().toList(),
+                        false // Kennzeichnung als Gruppe
+                ));
+            }
+        }
+
+        return tree;
     }
 
     /**
      * Rekursive Hilfsmethode zur Konvertierung einer Entity in ein Baum-DTO.
      */
     private OrgTreeResponseDTO convertToTreeResponse(OrganisationalUnit unit) {
-        // Rekursiver Aufruf für alle Unterabteilungen
+        // Rekursiver Aufruf für Unterabteilungen
         List<OrgTreeResponseDTO> subUnits = unit.getSubUnits().stream()
                 .map(this::convertToTreeResponse)
-                .toList();
+                .collect(Collectors.toList());
 
-        // Extrahiere nur die Benutzernamen der direkt zugeordneten User
+        // Direkt zugeordnete User dieser Einheit
         List<String> usernames = unit.getUsers().stream()
                 .map(User::getUsername)
                 .sorted()
@@ -47,9 +85,14 @@ public class OrganisationalUnitService {
                 unit.getId(),
                 unit.getName(),
                 subUnits,
-                usernames
+                usernames,
+                false // Eine OU ist niemals ein einzelner User-Knoten
         );
     }
+
+    /**
+     * Erstellt eine neue Organisationseinheit.
+     */
     @Transactional
     public OrganisationalUnit createUnit(String name, Long parentId) {
         OrganisationalUnit unit = new OrganisationalUnit();
@@ -64,13 +107,18 @@ public class OrganisationalUnitService {
         return orgUnitRepository.save(unit);
     }
 
+    /**
+     * Gibt alle Organisationseinheiten als flache Liste zurück.
+     */
     public List<OrganisationalUnit> getAllUnitsFlat() {
         return orgUnitRepository.findAll();
     }
 
+    /**
+     * Löscht eine Organisationseinheit anhand ihrer ID.
+     */
     @Transactional
     public void deleteUnit(Long id) {
-        // Optional: Prüfung ob noch User in der Einheit sind
         orgUnitRepository.deleteById(id);
     }
 }
